--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-@import url('global.css');
+@import url('global.css'); /* <-- Ise chhod dein */
+
+/* Baaki sabko comment kar dein */
+/*
 @import url('layout.css');
 @import url('components.css');
 @import url('pages/dashboard.css');
@@ -6,3 +9,4 @@
 @import url('pages/cash-register.css');
 @import url('pages/orders.css');
 @import url('pages/schedule.css');
+*/
